# dsa-agent

./: .gitignore  README.md  requirements.txt
ai-data-generator/: config-example.yaml  pyproject.toml  requirements.txt
ai-data-generator/bank_feedback_generator/: README.md  __init__.py  generator.py
ai-data-generator/call_center_data/: README.md  __init__.py  generator.py
ai-data-generator/docs/: bank_branch_raw_feedback_context.md  data_structure_context.md  telesales_vibevoice_data_structure.md
predictive-model-agent/: README.md  agent_tools.py  requirements.txt  run_scorecard.py
predictive-model-agent/docs/: multi-agent-scorecard-design.md
predictive-model-agent/notebook/: scoring.py  testing_tools.ipynb
predictive-model-agent/scorecard/: __init__.py  agents.py  artifacts.py  cli.py  hitl.py  orchestrator.py  schemas.py  settings.py  state.py  tools.py
predictive-model-agent/scorecard_runs/20260417T231906-698e80/: model_documentation.md  model_documentation_meta.json  proposal.json  run_manifest.json  split_config.json
predictive-model-agent/scorecard_runs/20260418T064002-28fbb6/: model_documentation.md  model_documentation_meta.json  proposal.json  run_manifest.json
predictive-model-agent/scorecard_runs/20260418T070237-eaf4f1/: feature_search_config.json  (+6 more)
topic-modelling/: README.md  report.md  topic-modelling-ai.py
topic-modelling/notebook/: chrome_viewer.ipynb
vector-db-writer/: README.md  ingest_bank_feedback.py  requirements.txt
vector-db-writer/docs/: chroma_bank_feedback_ingestion.md
vector-db-writer/notebook/: chrome_viewer.ipynb
(+63 files in other folders)
